<resources>
    <string name="app_name">Newsing IT</string>
    <string name="facebook_app_id">1176505682406858</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- ActionBar String -->
    <string name="actionbar_menu_1_str">HEAD</string>
    <string name="actionbar_menu_1_1_str">ADD HEAD</string>
    <string name="actionbar_menu_1_2_str">DEL HEAD</string>
    <string name="actionbar_menu_2_str">FOOT</string>
    <string name="actionbar_menu_2_1_str">ADD FOOT</string>
    <string name="actionbar_menu_2_2_str">DEL FOOT</string>

    <string name="load_more_normal">새로고침</string>
    <string name="load_more_loading">새로고침중...</string>
    <string name="load_more_error">새로고침 에러</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="people_write">새로운 댓글보기</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="sample_1">Sample 1</string>
    <string name="sample_2">Sample 2</string>
    <string name="title_activity_following__follow__friend">NEW THINKING IN NEWSING</string>
    <string name="title_activity_my__info_">My_Info_Activity</string>
    <string name="title_activity_tag__sample_">Tag_Sample_Activity</string>
    <string name="title_activity_google__login_">Google_Login_Activity</string>

    <string name="loading">loading</string>
    <string name="signed_out">signed_out</string>
    <string name="signed_in_fmt">LoginTest</string>
    <string name="title_activity_news__view">News_ViewActivity</string>
    <string name="title_activity_full__news_">Full_News_Activity</string>
    <string name="title_activity_sample_login">SampleLoginActivity</string>
    <string name="title_activity_singn_up_">SingnUp_Activity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_main_activity__tab">MainActivity_Tab</string>
    <string name="title_activity_image_viewer">ImageViewer</string>
    <string name="title_activity_facebook_sing_up">FacebookSingUpActivity</string>
    <string name="title_activity_facebook__signup_">Facebook_Signup_Activity</string>
</resources>
